Fixing inaccurate display of slots and calendar on Firefox

--- a/static/css/new_timetable/new_timetable.css
+++ b/static/css/new_timetable/new_timetable.css
@@ -81,6 +81,7 @@ input[type="text"]:focus {
 
 .fc-time-grid .fc-slats td {
    height: 25px;
+   line-height:25px;
    border-bottom: 0;
 }
 .slot-text-row {
